Modified README.md and run.bat